Shenandoah: Class Unloading may encounter recycled oops

XMLWordPrintable

    • gc
    • b14

      Unloading classes may require a walk of unreachable oops. For this reason, it is not safe to recycle memory before class unloading is complete.

      Note that the behavior of the load reference barrier to accommodate this requirement for class unloading, may interfere with the DeadCounterClosure when visiting weak oop storage. However, it does not seem to be a problem in practice because the dead count callbacks do not care about the precise number of dead objects (only that there are dead objects).

            Assignee:
            William Kemper
            Reporter:
            William Kemper
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: