8351444: Shenandoah: Class Unloading may encounter recycled oops

Reviewed-by: shade, rkennke